--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a href="#staff" class="nav__link"> Escolhas da Equipe</a>
             </li>
             <li>
-              <a href="#event" class="nav__link">Eventos</a>
+              <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
               <a class="nav__link">Seja um membro</a>
